New feture add in project page

--- a/projects.html
+++ b/projects.html
@@ -96,71 +96,71 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <ul class="project-menu d-flex justify-content-center">
-                        <li>All Items</li>
-                        <li>Mobile</li>
-                        <li>Ux Design</li>
-                        <li>Branding</li>
-                        <li>App</li>
+                    <ul class="projects-menu d-flex justify-content-center">
+                        <li data-filter="*" class="me-3">All Items</li>
+                        <li data-filter=".mobile" class="me-3">Mobile</li>
+                        <li data-filter=".ux" class="me-3">Ux Design</li>
+                        <li data-filter=".brand" class="me-3">Branding</li>
+                        <li data-filter=".app" class="me-3">App</li>
                     </ul>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-4">
+            <div class="row project-items">
+                <div class="col-md-4 ux app">
                     <div class="single-project">
-                        <img src="assets/img/project-1.jpg" alt="peoject image">
+                        <img src="assets/img/mobile.jpg" alt="peoject image">
                         <div class="project-content">
-                            <a href="assets/img/project-1.jpg">
+                            <a href="assets/img/mobile.jpg">
                                 <i class="fa-solid fa-plus"></i>
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 ux mobile brand">
                     <div class="single-project">
-                        <img src="assets/img/project-1.jpg" alt="peoject image">
+                        <img src="assets/img/ux.jpg" alt="peoject-image">
                         <div class="project-content">
-                            <a href="assets/img/project-1.jpg">
+                            <a href="assets/img/ux.jpg">
                                 <i class="fa-solid fa-plus"></i>
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 ux brand">
                     <div class="single-project">
-                        <img src="assets/img/project-1.jpg" alt="peoject image">
+                        <img src="assets/img/branding.jpg" alt="peoject-image">
                         <div class="project-content">
-                            <a href="assets/img/project-1.jpg">
+                            <a href="assets/img/branding.jpg">
                                 <i class="fa-solid fa-plus"></i>
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 mobile brand">
                     <div class="single-project">
-                        <img src="assets/img/project-1.jpg" alt="peoject image">
+                        <img src="assets/img/apps.jpg" alt="peoject-image">
                         <div class="project-content">
-                            <a href="assets/img/project-1.jpg">
+                            <a href="assets/img/apps.jpg">
                                 <i class="fa-solid fa-plus"></i>
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 ux mobile brand">
                     <div class="single-project">
-                        <img src="assets/img/project-1.jpg" alt="peoject image">
+                        <img src="assets/img/project-5.jpg" alt="peoject-image">
                         <div class="project-content">
-                            <a href="assets/img/project-1.jpg">
+                            <a href="assets/img/project-5.jpg">
                                 <i class="fa-solid fa-plus"></i>
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 ux">
                     <div class="single-project">
-                        <img src="assets/img/project-1.jpg" alt="peoject image">
+                        <img src="assets/img/project-6.jpg" alt="peoject-image">
                         <div class="project-content">
-                            <a href="assets/img/project-1.jpg">
+                            <a href="assets/img/project-6.jpg">
                                 <i class="fa-solid fa-plus"></i>
                             </a>
                         </div>
@@ -276,6 +276,8 @@
     <script src="assets/js/counterup.min.js"></script>
     <!-- counterup js -->
     <script src="assets/js/waypoint.min.js"></script>
+    <!-- isotop filter -->
+    <script src="assets/js/isotop.min.js"></script>
     <!-- main js -->
     <script src="assets/js/main.js"></script>
     
