--- a/index.html
+++ b/index.html
@@ -229,9 +229,9 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6">
                     <div class="single-project">
-                        <img src="assets/img/project-1.jpg" alt="peoject image">
+                        <img src="assets/img/mobile.jpg" alt="peoject-image" class="img-fluid">
                         <div class="project-content">
-                            <a href="assets/img/project-1.jpg">
+                            <a href="assets/img/mobile.jpg" class="popup-image">
                                 <i class="fa-solid fa-plus"></i>
                             </a>
                         </div>
@@ -239,9 +239,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single-project">
-                        <img src="assets/img/project-1.jpg" alt="peoject image">
+                        <img src="assets/img/ux.jpg" alt="peoject-image" class="img-fluid">
                         <div class="project-content">
-                            <a href="assets/img/project-1.jpg">
+                            <a href="assets/img/ux.jpg" class="popup-image">
                                 <i class="fa-solid fa-plus"></i>
                             </a>
                         </div>
@@ -249,9 +249,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single-project">
-                        <img src="assets/img/project-1.jpg" alt="peoject image">
+                        <img src="assets/img/branding.jpg" alt="peoject-image" class="img-fluid">
                         <div class="project-content">
-                            <a href="assets/img/project-1.jpg">
+                            <a href="assets/img/branding.jpg" class="popup-image">
                                 <i class="fa-solid fa-plus"></i>
                             </a>
                         </div>
@@ -259,9 +259,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single-project">
-                        <img src="assets/img/project-1.jpg" alt="peoject image">
+                        <img src="assets/img/apps.jpg" alt="ux-image" class="img-fluid">
                         <div class="project-content">
-                            <a href="assets/img/project-1.jpg">
+                            <a href="assets/img/apps.jpg" class="popup-image">
                                 <i class="fa-solid fa-plus"></i>
                             </a>
                         </div>
@@ -269,9 +269,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single-project">
-                        <img src="assets/img/project-1.jpg" alt="peoject image">
+                        <img src="assets/img/project-5.jpg" alt="apps-image" class="img-fluid">
                         <div class="project-content">
-                            <a href="assets/img/project-1.jpg">
+                            <a href="assets/img/project-5.jpg" class="popup-image">
                                 <i class="fa-solid fa-plus"></i>
                             </a>
                         </div>
@@ -279,9 +279,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single-project">
-                        <img src="assets/img/project-1.jpg" alt="peoject image">
+                        <img src="assets/img/project-6.jpg" alt="branding-image" class="img-fluid">
                         <div class="project-content">
-                            <a href="assets/img/project-1.jpg">
+                            <a href="assets/img/project-6.jpg" class="popup-image">
                                 <i class="fa-solid fa-plus"></i>
                             </a>
                         </div>
